--- a/composer.json
+++ b/composer.json
@@ -22,6 +22,6 @@
         "php": ">=5.3.3",
         "kohana/core": ">=3.3",
         "kohana/orm": ">=3.3",
-        "kohana/red": "dev-master"
+        "davidstutz/kohana-red": "dev-master"
     }
 }
