Tested with Kohana 3.3.6, see davidstutz/kohana-demo.

--- a/composer.json
+++ b/composer.json
@@ -4,7 +4,7 @@
     "description": "Access control module based on kohana-red.",
     "homepage": "https://davidstutz.de",
     "license": "BSD-3-Clause",
-    "keywords": ["kohana", "framework", "access-control"],
+    "keywords": ["kohana"],
     "authors": [
         {
             "name": "David Stutz",
